--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,8 @@ repositories {
 dependencies {
   compile 'com.google.code.gson:gson:2.3.1'
 }
+
+task run(type:JavaExec) {
+  main = 'benchmark.Benchmark'
+  classpath = sourceSets.main.runtimeClasspath
+}
