--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ repositories {
 }
 
 dependencies {
-  compile 'com.google.code.gson:gson:2.3.1'
+  compile 'com.google.code.gson:gson:2.3.1',
+    'com.fasterxml.jackson.core:jackson-databind:2.5.1'
 }
 
 task run(type:JavaExec) {
