--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ repositories {
 
 dependencies {
   compile 'com.google.code.gson:gson:2.3.1',
-    'com.fasterxml.jackson.core:jackson-databind:2.5.1'
+    'com.fasterxml.jackson.core:jackson-databind:2.5.1',
+    'com.alibaba:fastjson:1.2.4'
 }
 
 task run(type:JavaExec) {
